common/parser/src/rules/snapshots/parser__rules__relations_engine__tests__one_to_many_relation_bidirectional_1.snap
---
source: common/parser/src/rules/relations_engine.rs
assertion_line: 219
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: ManyToOne,
        relation: (
            "Author",
            "Post",
        ),
        birectional: true,
    },
}
