common/parser/src/rules/snapshots/parser__rules__relations_engine__tests__one_to_one_relation_monodirectional.snap
---
source: common/parser/src/rules/relations_engine.rs
assertion_line: 120
expression: "&ctx.relations"
---
{
    "AuthorRelatePost": MetaRelation {
        name: "AuthorRelatePost",
        kind: OneToOne,
        relation: (
            "Post",
            "Author",
        ),
        birectional: false,
    },
}
